--- a/Pos.csproj
+++ b/Pos.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.36" />
     <PackageReference Include="Microsoft.Graph" Version="5.62.0" />
     <PackageReference Include="MudBlazor" Version="7.14.0" />
     <PackageReference Include="MudBlazor.ThemeManager" Version="2.1.0" />
